# ruff-pre-commit-bug-demo

./: .pre-commit-config.yaml  README.md  pyproject.toml
myproject/: __init__.py
