[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.1.15"
pre-commit = "^3.6.0"

[tool.ruff]
select = [
    "INP",
]
target-version = "py312"
include = [
    "**/pyproject.toml",
    "myproject/**/*.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
